# wordbot

./: Cargo.toml  Dockerfile  README.md  azure-pipelines.yml
src/: dictionary.rs  main.rs  telegram.rs  urban.rs
src/dictionary/rest/: api_dictionary.rs  mod.rs
src/urban/rest/: mod.rs  urban_dictionary.rs
