[package]
name = "wordbot"
version = "0.4.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12.2", features = ["macros"] }
log = "0.4.20"
pretty_env_logger = "0.5.0"
tokio = { version =  "1.38.2", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"

[dev-dependencies]
tokio-test = "0.4.3"