[package]
name = "wordbot"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.17.0", features = ["macros"] }
log = "0.4.27"
pretty_env_logger = "0.5.0"
tokio = { version =  "1.47.1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
